[project]
name = "ducklake-excel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-identity>=1.23.0",
    "duckdb>=1.3.0",
    "msal>=1.32.3",
    "msgraph-sdk>=1.31.0",
    "office365-rest-python-client>=2.6.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
